--- a/nginx.conf
+++ b/nginx.conf
@@ -19,4 +19,9 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+
+    location /3d {
+        root /usr/share/nginx/html;
+        index index.html;
+    }
 }
