🌟 feat(link): add download link

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,4 +24,8 @@ server {
         root /usr/share/nginx/html;
         index index.html;
     }
+
+    location /download {
+        root /usr/share/nginx/html;
+    }
 }
